# xpouch-ai

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.cjs  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEPLOY_UBUNTU.md  Justfile  LICENSE  MEM.md  Makefile  POSTGRES_DEPLOYMENT.md  REACT_19_OPTIMIZATION_CHECKLIST.md  README.md  REFACTOR_SUMMARY.md  SECURITY.md  THEME_GUIDE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  start-backend.bat  xpouch_ultra_refined.html  xpouch_v2.7_ultimate.html
.ai/: active_context.md  business_rules.md  data_schema.md  system_architecture.md  tech_standards.md
.github/workflows/: ci.yml
ai/: AGENTS.md
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  INFRATURE_GUIDE.md  __init__.py  alembic.ini  auth.py  check_memory.py  check_thread.py  config.py  constants.py  database.py  debug_events.py  debug_planner.py  dependencies.py  expert_config.py  fix_checkpoint_table.py  library_defaults.py  main.py  models.py  providers.yaml  providers_config.py  pyproject.toml  requirements.txt  run.py  run_validation.bat  test_models.py
backend/agents/: __init__.py  commander.py  dynamic_experts.py  expert_loader.py  expert_nodes.py  experts.py  generic_worker.py  graph.py  graph_builder.py  model_fallback.py  routing_policy.py  state.py  state_patch.py  tool_policy.py  tool_runtime.py
backend/agents/nodes/: __init__.py  aggregator.py  commander.py  dispatcher.py  generic.py  router.py
backend/agents/services/: __init__.py  expert_manager.py  task_manager.py
backend/api/: admin.py  library.py  tools.py
backend/crud/: __init__.py  agent_run.py  execution_plan.py  invoke_session.py  query_helpers.py  run_event.py  stats.py  task_session.py
backend/data/: database.db
backend/evals/: __init__.py  regression_runner.py
backend/evals/assets/: regression_cases.json
backend/event_types/: __init__.py  events.py
backend/migrations/: README.md  __init__.py  add_mcp_servers_table.sql  add_mcp_transport_column.sql  add_message_metadata.sql  apply_all_migrations.sql  apply_migrations.py  checkpoint_tables.sql  env.py  migrate.py  migration_001_architecture_refactoring.py  migration_002_jwt_auth.py  migration_003_rbac_and_system_experts.py  migration_004_add_granular_roles.py  run_all_migrations.sh  run_migration.ps1  run_migration.sh  runner.py  v3_0_1_thread_fields.sql  v3_0_complex_mode_refactor.sql  verify_conversations.py
backend/migrations/versions/: 001_initial_schema_v3_2_4.py  002_fix_db_schema_issues.py  003_add_plan_version_to_tasksession.py  004_add_common_query_indexes.py  005_unify_index_naming_and_systemexpert_uuid.py  006_add_config_version_to_system_expert.py  20260304_180000_standardize_enum_and_length_constraints.py  20260306_120000_add_waiting_for_approval_status.py  20260307_140000_harden_verification_and_thread_fk.py  20260307_160000_add_agent_run_foundation.py  20260308_113000_add_agentrun_deadline.py  20260308_133500_normalize_enum_labels_to_values.py  20260308_150000_add_run_event_ledger.py  20260308_230000_add_tool_policy_and_skill_template.py  20260313_120000_add_artifact_schema_to_template.py  20260317_200000_ensure_task_status_enum_complete.py
backend/models/: __init__.py  enums.py  mcp.py  memory.py
backend/models/domain/: __init__.py  agent_run.py  artifact.py  custom_agent.py  execution_plan.py  message.py  run_event.py  skill_template.py  subtask.py  system_expert.py  task_session.py  thread.py  tool_policy.py  user.py
backend/routers/: __init__.py  agents.py  chat.py  mcp.py  runs.py  stats.py  system.py
backend/schemas/: __init__.py  common.py  conversation.py  custom_agent.py  run_event.py  skill_template.py  stats.py  task.py  template_import_export.py  tool_policy.py
backend/scripts/: README.md  export_sqlite.py  import_to_postgres.py  init_db.py  init_experts.py  init_memory_expert.py  promote_admin.py  run_commander_workflow.py
backend/services/: __init__.py  agent_service.py  invoke_service.py  mcp_tools_service.py  memory_manager.py  session_cleanup_service.py  tool_policy_service.py
backend/services/chat/: __init__.py  artifact_service.py  recovery_service.py  session_service.py  stream_service.py  thread_service.py
backend/tests/: conftest.py  test_agent_run_status.py  test_agent_service.py  test_arch_resilience_guards.py  test_chat_resume_smoke.py  test_enum_regression.py  test_event_queue_immutability.py  test_migration_naming.py  test_migration_revision_format.py  test_recovery_idempotency.py  test_regression_runner.py  test_router_force_complex.py  test_run_event.py  test_runs_router.py  test_sse_protocol_contract.py  test_stream_service_deadline_guard.py  test_stream_service_persistence_guard.py  test_task_manager_run_event.py  test_task_manager_run_link.py  test_template_import_export.py  test_thread_service.py  test_tool_policy.py  test_tool_runtime_policy.py  test_verification_security.py
backend/tools/: __init__.py  browser.py  search.py  utils.py
backend/types/: events.py
backend/utils/: __init__.py  admin_init.py  artifacts.py  async_task_queue.py  db.py  error_codes.py  event_generator.py  exceptions.py  json_parser.py  jwt_handler.py  llm_factory.py  logger.py  prompt_utils.py  sms_service.py  sse_builder.py  thinking_parser.py  verification.py
docs/: ARCHITECTURE_REFACTORING.md  TODO.md  task.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  .sentryclirc  CHANGELOG.md  Dockerfile  MEM.md  ReactCompiler.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/components/: AdminRoute.tsx  AgentCard.test.tsx  AgentCard.tsx  AgentHeader.tsx  AgentPreviewCard.tsx  AppLayout.tsx  AppRoot.tsx  ArtifactRenderer.md  ArtifactRenderer.tsx  ArtifactTabs.tsx  (+49 more)
(+244 files in other folders)
