[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "langchain-core>=1.0.0,<2.0.0",  # ðŸ”¥ æ”¶ç´§ï¼šé™åˆ¶åœ¨ä¸»ç‰ˆæœ¬ 1.xï¼Œé¿å…ç ´åæ€§å˜æ›´
    "langchain-openai>=1.0.0,<2.0.0",  # ðŸ”¥ æ”¶ç´§ï¼šä¸Ž langchain-core ç‰ˆæœ¬å…¼å®¹
    "langchain-community>=0.3.0,<1.0.0",  # ðŸ”¥ æ”¶ç´§ï¼šé™åˆ¶åœ¨ä¸»ç‰ˆæœ¬ 0.x
    "langchain-tavily>=0.2.0,<1.0.0",  # ðŸ”¥ æ–°å¢žï¼šTavily å®˜æ–¹å·¥å…·åŒ…
    "tavily-python>=0.5.0,<1.0.0",  # ðŸ”¥ æ–°å¢žï¼šTavily è”ç½‘æœç´¢ SDK
    "langgraph>=1.0.0,<2.0.0",  # ðŸ”¥ æ”¶ç´§ï¼šé™åˆ¶åœ¨ä¸»ç‰ˆæœ¬ 1.x
    "langgraph-sdk>=0.3.0,<1.0.0",  # ðŸ”¥ å‡çº§ï¼šLangGraph SDK 0.3.x
    "langgraph-checkpoint-postgres>=2.0.0,<4.0.0",  # ðŸ”¥ðŸ”¥ðŸ”¥ v3.1.0 HITL: PostgreSQL checkpointer
    "python-dotenv>=1.2.0,<2.0.0",
    "sqlmodel>=0.0.31,<1.0.0",
    "tencentcloud-sdk-python>=3.0.0,<4.0.0",
    "uvicorn>=0.40.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",  # æ–°å¢žï¼šç”¨äºŽç”Ÿäº§çŽ¯å¢ƒå¤š worker éƒ¨ç½²
    "watchfiles>=0.20.0,<1.0.0",  # ðŸ”¥ æ–°å¢žï¼šWindows çƒ­é‡è½½å…¼å®¹
    "PyJWT>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "psycopg[binary]>=3.3.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pgvector>=0.3.0,<1.0.0",  # ðŸ”¥ æ–°å¢žï¼špgvector Python å®¢æˆ·ç«¯ï¼Œæ”¯æŒå‘é‡æ“ä½œ
    "mcp>=1.26.0",
    "langchain-mcp-adapters>=0.2.1",
    "tenacity>=9.0.0",  # P1 æ–°å¢ž: é‡è¯•æœºåˆ¶
    "cachetools>=5.3.0",  # P1 æ–°å¢ž: TTL ç¼“å­˜
]
