[project]
name = "backend"
version = "3.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "langchain-core>=1.0.0,<2.0.0",  # 🔥 收紧：限制在主版本 1.x，避免破坏性变更
    "langchain-openai>=1.0.0,<2.0.0",  # 🔥 收紧：与 langchain-core 版本兼容
    "langchain-community>=0.3.0,<1.0.0",  # 🔥 收紧：限制在主版本 0.x
    "langchain-tavily>=0.2.0,<1.0.0",  # 🔥 新增：Tavily 官方工具包
    "tavily-python>=0.5.0,<1.0.0",  # 🔥 新增：Tavily 联网搜索 SDK
    "langgraph>=1.0.0,<2.0.0",  # 🔥 收紧：限制在主版本 1.x
    "langgraph-sdk>=0.3.0,<1.0.0",  # 🔥 升级：LangGraph SDK 0.3.x
    "langgraph-checkpoint-postgres>=2.0.0,<4.0.0",  # 🔥🔥🔥 v3.1.0 HITL: PostgreSQL checkpointer
    "python-dotenv>=1.2.0,<2.0.0",
    "sqlmodel>=0.0.31,<1.0.0",
    "tencentcloud-sdk-python>=3.0.0,<4.0.0",
    "uvicorn>=0.40.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",  # 新增：用于生产环境多 worker 部署
    "watchfiles>=0.20.0,<1.0.0",  # 🔥 新增：Windows 热重载兼容
    "PyJWT>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.0,<1.0.0",
    "psycopg[binary]>=3.3.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pgvector>=0.3.0,<1.0.0",  # 🔥 新增：pgvector Python 客户端，支持向量操作
    "mcp>=1.26.0,<2.0.0",  # P0 修复: 添加版本上限，防止破坏性更新
    "langchain-mcp-adapters>=0.2.1",
    "tenacity>=9.0.0,<10.0.0",  # P1 新增: 重试机制
    "cachetools>=5.3.0,<6.0.0",  # P1 新增: TTL 缓存
]

[tool.ruff]
target-version = "py313"  # Python 3.13
line-length = 100  # 行长度限制

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import 排序)
    "N",   # pep8-naming (命名规范)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (Python 升级检查)
    "B",   # flake8-bugbear (常见 bug)
    "C4",  # flake8-comprehensions (推导式优化)
]
ignore = [
    "E501",  # line too long (由 formatter 处理)
    "N805",  # first argument of a method should be named 'self' (SQLModel 等场景)
    "B008",  # FastAPI Depends() 是合法用法，不是函数调用陷阱
    "E402",  # import 顺序由 isort 处理，且需兼容 load_dotenv()
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google 风格文档字符串

[tool.ruff.format]
quote-style = "double"  # 使用双引号
indent-style = "space"   # 使用空格缩进
line-ending = "lf"       # Unix 风格换行
