[project]
name = "backend"
version = "3.2.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0,<1.0.0",
    "starlette>=0.52.1",  # 🔥 安全修复: DoS 漏洞 (GHSA-f96h-pmfr-66vw)
    "pydantic-settings>=2.13.1",  # 🟡 支持更多配置源
    # Note: pydantic-core 2.42.0+ 需要 pydantic 2.13.0+，但 LangChain 尚未支持，暂时保持现状
    "langchain-core>=1.0.0,<2.0.0",  # 🔥 收紧：限制在主版本 1.x，避免破坏性变更
    "langchain-openai>=1.0.0,<2.0.0",  # 🔥 收紧：与 langchain-core 版本兼容
    "langchain-community>=0.3.0,<1.0.0",  # 🔥 收紧：限制在主版本 0.x
    "langchain-tavily>=0.2.0,<1.0.0",  # 🔥 新增：Tavily 官方工具包
    "tavily-python>=0.5.0,<1.0.0",  # 🔥 新增：Tavily 联网搜索 SDK
    "langgraph>=1.0.0,<2.0.0",  # 🔥 收紧：限制在主版本 1.x
    "langgraph-sdk>=0.3.0,<1.0.0",  # 🔥 升级：LangGraph SDK 0.3.x
    "langgraph-checkpoint-postgres>=2.0.0,<4.0.0",  # 🔥🔥🔥 v3.1.0 HITL: PostgreSQL checkpointer
    "python-dotenv>=1.2.0,<2.0.0",
    "sqlalchemy>=2.0.48",  # 🟡 并发连接修复
    "sqlmodel>=0.0.37,<1.0.0",
    "tencentcloud-sdk-python>=3.0.0,<4.0.0",
    "uvicorn>=0.41.0,<1.0.0",  # 🟡 稳定性提升
    "gunicorn>=23.0.0,<24.0.0",  # 新增：用于生产环境多 worker 部署
    "watchfiles>=0.20.0,<1.0.0",  # 🔥 新增：Windows 热重载兼容
    "PyJWT>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.0,<1.0.0",
    "psycopg[binary]>=3.3.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pgvector>=0.3.0,<1.0.0",  # 🔥 新增：pgvector Python 客户端，支持向量操作
    "mcp>=1.26.0,<2.0.0",  # P0 修复: 添加版本上限，防止破坏性更新
    "langchain-mcp-adapters>=0.2.1",
    "tenacity>=9.0.0,<10.0.0",  # P1 新增: 重试机制
    "cachetools>=5.3.0,<6.0.0",  # P1 新增: TTL 缓存
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"  # Python 3.13
line-length = 100  # 行长度限制

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import 排序)
    "N",   # pep8-naming (命名规范)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (Python 升级检查)
    "B",   # flake8-bugbear (常见 bug)
    "C4",  # flake8-comprehensions (推导式优化)
    "SIM", # flake8-simplify (代码简化建议)
]
ignore = [
    "E501",  # line too long (由 formatter 处理)
    "B008",  # FastAPI Depends() 是框架标准用法，不是函数调用陷阱
]

# 对特定文件放宽规则（副作用导入、循环引用等特殊场景）
[tool.ruff.lint.per-file-ignores]
# F401: 这些文件导入模型是为了注册到 SQLModel.metadata，不是真的未使用
# E402: 模块级导入不在顶部（需要 load_dotenv 后再导入）
"database.py" = ["F401", "E402"]
"migrations/env.py" = ["F401", "E402"]
"models/__init__.py" = ["F401"]
"main.py" = ["E402"]  # load_dotenv 后导入，符合项目模式
"auth.py" = ["E402"]  # 函数定义后导入，避免循环依赖
"routers/system.py" = ["E402"]  # 注释后条件导入
# SQLAlchemy 兼容性：保留字符串引用和 Optional 写法
"models/domain/*.py" = ["UP037", "UP045"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Google 风格文档字符串

[tool.ruff.format]
quote-style = "double"  # 使用双引号
indent-style = "space"   # 使用空格缩进
line-ending = "lf"       # Unix 风格换行
